# dsa-for-data-scientists

./: .gitignore  01_arrays_and_strings.md  02_hashing.md  03_linked_lists.md  04_stacks_and_queues.md  05_trees_and_graphs.md  06_heaps.md  07_greedy.md  08_binary_search.md  09_backtracking.md  10_dynamic_programming.md  CLAUDE.md  README.md  pyproject.toml
01_arrays_and_strings/: arrays_and_strings.ipynb  notes.md
02_hashing/: hashing.ipynb  notes.md
03_linked_lists/: linked_lists.ipynb  notes.md
04_stacks_and_queues/: notes.md  stacks_and_queues.ipynb
05_trees_and_graphs/: notes.md  trees_and_graphs.ipynb
06_heaps/: heaps.ipynb  notes.md
07_greedy/: greedy.ipynb  notes.md
08_binary_search/: binary_search.ipynb  notes.md
09_backtracking/: backtracking.ipynb  notes.md
10_dynamic_programming/: dynamic_programming.ipynb  notes.md
